# RAG-VKR-HSE

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  research.ipynb
data_pipeline/: build_corpus.py  download.py  ingest.py  run_all.py
docker/: Dockerfile  supervisord.conf
hf_rag/: api.py  cache.py  config.py  pipeline.py  ui.py
rag_corpus/: stats.txt
rag_corpus_cleaned/: corpus.jsonl
rag_corpus_cleaned_v2/: corpus.jsonl
